[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/disco/minigames/cocktail_bar/recipe/Recipe.gd" type="Script" id=1]

[node name="Recipe" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 7.0
margin_bottom = 25.0

[node name="IngredientContainer" type="VBoxContainer" parent="VBoxContainer"]

[node name="TimeLeft" type="Label" parent="VBoxContainer"]
margin_top = 4.0
margin_bottom = 18.0
align = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
